# AndoridOpenGLCube

./: README.md  build.gradle
app/: build.gradle
app/src/androidTest/java/com/example/ty/openglndk/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: fragment_shader.glsl  vertex_shader.glsl
app/src/main/assets/shape/: fragment_shader.glsl
app/src/main/assets/simplePBO/: fragment_shader.glsl  vertex_shader.glsl
app/src/main/assets/texture/: fragment_shader.glsl  vertex_shader.glsl
app/src/main/cpp/: CMakeLists.txt  jni_opengl_controler.cpp  jni_opengl_controler.h
app/src/main/cpp/jni/: Heightmap.cpp
app/src/main/cpp/librender/: CMakeLists.txt  assets_reader.cpp  assets_reader.h  base_render.cpp  base_render.h  cube_texture_render.cpp  cube_texture_render.h  egl_core.cpp  egl_core.h  opengl_render_controller.cpp  opengl_render_controller.h  pbo_render.cpp  pbo_render.h  shape_render.cpp  shape_render.h
app/src/main/java/com/example/ty/openglndk/: CubeTextureActivity.kt  GLSurfaceView.java  MainActivity.kt  NativeOpenglControler.kt  PBOActivity.kt  TestView.kt  VAOVBOActivity.kt
app/src/main/res/layout/: activity_cube_texture.xml  activity_main.xml  activity_pbo.xml  activity_vao_vbo.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/ty/openglndk/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
